--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Create.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Create.cshtml
@@ -14,9 +14,9 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="County.CtyName" class="control-label"></label>
-                <input asp-for="County.CtyName" class="form-control" />
-                <span asp-validation-for="County.CtyName" class="text-danger"></span>
+                <label asp-for="County.CoName" class="control-label"></label>
+                <input asp-for="County.CoName" class="form-control" />
+                <span asp-validation-for="County.CoName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
