--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Delete.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Delete.cshtml
@@ -13,15 +13,15 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.County.CtyName)
+            @Html.DisplayNameFor(model => model.County.CoName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.County.CtyName)
+            @Html.DisplayFor(model => model.County.CoName)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="County.CtyId" />
+        <input type="hidden" asp-for="County.CoId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
