--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Details.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Details.cshtml
@@ -12,14 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.County.CtyName)
+            @Html.DisplayNameFor(model => model.County.CoName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.County.CtyName)
+            @Html.DisplayFor(model => model.County.CoName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.County.CtyId">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.County.CoId">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
