--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Edit.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Edit.cshtml
@@ -13,11 +13,11 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="County.CtyId" />
+            <input type="hidden" asp-for="County.CoId" />
             <div class="form-group">
-                <label asp-for="County.CtyName" class="control-label"></label>
-                <input asp-for="County.CtyName" class="form-control" />
-                <span asp-validation-for="County.CtyName" class="text-danger"></span>
+                <label asp-for="County.CoName" class="control-label"></label>
+                <input asp-for="County.CoName" class="form-control" />
+                <span asp-validation-for="County.CoName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
