--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
@@ -13,8 +13,8 @@
 <ul>
     <li><a asp-page="/TableMaintenance/County/Index">County</a></li>
     @*<li><a asp-page="/TableMaintenance/ExitReason/Index">Exit Reason</a></li>
-        <li><a asp-page="/TableMaintenance/Hub/Index">Early Learning Hub</a></li>
-        <li><a asp-page="/TableMaintenance/Provider/Index">Provider</a></li>*@
+        <li><a asp-page="/TableMaintenance/Hub/Index">Early Learning Hub</a></li>*@
+    <li><a asp-page="/TableMaintenance/Provider/Index">Provider</a></li>
     <li><a asp-page="/TableMaintenance/ProviderType/Index">Provider Type</a></li>
 </ul>
 
