--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/Provider/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/Provider/Index.cshtml
@@ -10,6 +10,21 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
+<form asp-page="./Index" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Find by name:
+            <input type="text" name="SearchString" value="@Model.CurrentFilter" />
+            <input type="submit" value="Search" class="btn btn-default" /> |
+            <a asp-page="./Index">Back to full List</a>
+        </p>
+    </div>
+</form>
+
+
+
+
 <table class="table">
     <thead>
         <tr>
@@ -30,21 +45,42 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Provider) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.PrvdName)
-                
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PrvdPt.PtName)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.PrvdId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.PrvdId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.PrvdId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Provider)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PrvdName)
+
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PrvdPt.PtName)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.PrvdId">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.PrvdId">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.PrvdId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.Provider.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.Provider.HasNextPage ? "disabled" : "";
+}
+
+<a asp-page="./Index"
+   asp-route-sortOrder="@Model.CurrentSort"
+   asp-route-pageIndex="@(Model.Provider.PageIndex - 1)"
+   asp-route-currentFilter="@Model.CurrentFilter"
+   class="btn btn-default @prevDisabled">
+    Previous
+</a>
+<a asp-page="./Index"
+   asp-route-sortOrder="@Model.CurrentSort"
+   asp-route-pageIndex="@(Model.Provider.PageIndex + 1)"
+   asp-route-currentFilter="@Model.CurrentFilter"
+   class="btn btn-default @nextDisabled">
+    Next
+</a>
