Updated Classes and Table Maintenance links

--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
@@ -22,9 +22,9 @@
     <li><a asp-page="/TableMaintenance/HomelessStatus/Index">Homelessness Status</a></li>
     <li><a asp-page="/TableMaintenance/IFSPStatus/Index">IFSP Status</a></li>
     <li><a asp-page="/TableMaintenance/MigrantStatus/Index">Migrant Status</a></li>
-    <li><a asp-page="/TableMaintenance/OtherNameType/Index">OtherNameType</a></li>
+    <li><a asp-page="/TableMaintenance/OtherNameType/Index">Other Name Type</a></li>
     <li><a asp-page="/TableMaintenance/RaceEthnicity/Index">Race/Ethnicity</a></li>
-    <li><a asp-page="/TableMaintenance/ReceiveService/ReceiveService">Level</a></li>
+    <li><a asp-page="/TableMaintenance/ReceiveService/Index">Receive Service</a></li>
     <li><a asp-page="/TableMaintenance/SparkRating/Index">Spark Rating</a></li>
     <li><a asp-page="/TableMaintenance/State/Index">State</a></li>
 </ul>
