Added Table Maintanance

--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
@@ -12,20 +12,23 @@
 
 <ul>
     <li><a asp-page="/TableMaintenance/County/Index">County</a></li>
+    <li><a asp-page="/TableMaintenance/EducationalLevel/Index">Educational Level</a></li>
     <li><a asp-page="/TableMaintenance/ExitReason/Index">Exit Reason</a></li>
     <li><a asp-page="/TableMaintenance/ELHub/Index">Early Learning Hub</a></li>
-    <li><a asp-page="/TableMaintenance/Provider/Index">Provider</a></li>
-    <li><a asp-page="/TableMaintenance/ProviderType/Index">Provider Type</a></li>
-    <li><a asp-page="/TableMaintenance/Income/Index">Income</a></li>
-    <li><a asp-page="/TableMaintenance/Language/Index">Language</a></li>
     <li><a asp-page="/TableMaintenance/FosterCare/Index">Foster Care</a></li>
+    <li><a asp-page="/TableMaintenance/Gender/Index">Gender</a></li>
     <li><a asp-page="/TableMaintenance/HomelessStatus/Index">Homelessness Status</a></li>
     <li><a asp-page="/TableMaintenance/IFSPStatus/Index">IFSP Status</a></li>
+    <li><a asp-page="/TableMaintenance/Income/Index">Income</a></li>
+    <li><a asp-page="/TableMaintenance/Language/Index">Language</a></li>
     <li><a asp-page="/TableMaintenance/MigrantStatus/Index">Migrant Status</a></li>
     <li><a asp-page="/TableMaintenance/OtherNameType/Index">Other Name Type</a></li>
+    <li><a asp-page="/TableMaintenance/Provider/Index">Provider</a></li>
+    <li><a asp-page="/TableMaintenance/ProviderType/Index">Provider Type</a></li>
     <li><a asp-page="/TableMaintenance/RaceEthnicity/Index">Race/Ethnicity</a></li>
     <li><a asp-page="/TableMaintenance/ReceiveService/Index">Receive Service</a></li>
     <li><a asp-page="/TableMaintenance/SparkRating/Index">Spark Rating</a></li>
     <li><a asp-page="/TableMaintenance/State/Index">State</a></li>
+
 </ul>
 
