--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/County/Index.cshtml
@@ -2,10 +2,10 @@
 @model EarlyLearningHub.Pages.TableMaintenance.County.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "County";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
     <a asp-page="Create">Create New</a>
