--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/EducationalLevel/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/EducationalLevel/Index.cshtml
@@ -2,10 +2,10 @@
 @model EarlyLearningHub.Pages.TableMaintenance.EducationLevel.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Education Level";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
     <a asp-page="Create">Create New</a>
