--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
@@ -29,5 +29,6 @@
     <li><a asp-page="/TableMaintenance/ReceiveService/Index">Receive Service</a></li>
     <li><a asp-page="/TableMaintenance/SparkRating/Index">Spark Rating</a></li>
     <li><a asp-page="/TableMaintenance/State/Index">State</a></li>
+    <li><a asp-page="/TableMaintenance/QuarterlyRange/Index">Quarterly Range</a></li>
 </ul>
 
