--- a/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
@@ -32,8 +32,9 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
                     @*<li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>*@
+        <li><a asp-page="/Contact">Contact</a></li>*@
                     <li><a asp-page="/TableMaintenance">Table Maintenance (Admin)</a></li>
+                    <li><a asp-page="/Main/ProviderLevel/Index">Provider Level</a></li>
                 </ul>
             </div>
         </div>
