Updated Provider Level

--- a/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Create.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Create.cshtml
@@ -2,12 +2,12 @@
 @model EarlyLearningHub.Pages.Main.ProviderLevel.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Provider Level";
 }
 
-<h2>Create</h2>
+<h2>Provider Level</h2>
 
-<h4>ProviderLevel</h4>
+@*<h4>ProviderLevel</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
