--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance.cshtml
@@ -23,12 +23,14 @@
     <li><a asp-page="/TableMaintenance/Language/Index">Language</a></li>
     <li><a asp-page="/TableMaintenance/MigrantStatus/Index">Migrant Status</a></li>
     <li><a asp-page="/TableMaintenance/OtherNameType/Index">Other Name Type</a></li>
+    <li><a asp-page="/TableMaintenance/Option/Index">Option</a></li>
     <li><a asp-page="/TableMaintenance/Provider/Index">Provider</a></li>
     <li><a asp-page="/TableMaintenance/ProviderType/Index">Provider Type</a></li>
+    <li><a asp-page="/TableMaintenance/QuarterlyRange/Index">Quarterly Range</a></li>
     <li><a asp-page="/TableMaintenance/RaceEthnicity/Index">Race/Ethnicity</a></li>
     <li><a asp-page="/TableMaintenance/ReceiveService/Index">Receive Service</a></li>
     <li><a asp-page="/TableMaintenance/SparkRating/Index">Spark Rating</a></li>
     <li><a asp-page="/TableMaintenance/State/Index">State</a></li>
-    <li><a asp-page="/TableMaintenance/QuarterlyRange/Index">Quarterly Range</a></li>
+
 </ul>
 
