cosmetic changes to index pages

--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/ELHub/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/ELHub/Index.cshtml
@@ -2,10 +2,10 @@
 @model EarlyLearningHub.Pages.TableMaintenance.ELHub.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Early Learning Hub";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
     <a asp-page="Create">Create New</a>
