--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/Gender/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/Gender/Index.cshtml
@@ -2,10 +2,10 @@
 @model EarlyLearningHub.Pages.TableMaintenance.Gender.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Gender";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -23,20 +23,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Gender) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.GeName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GeAbbreviation)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.GeId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.GeId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.GeId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Gender)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GeName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GeAbbreviation)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.GeId">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.GeId">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.GeId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
