--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/HomelessStatus/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/HomelessStatus/Index.cshtml
@@ -2,10 +2,10 @@
 @model EarlyLearningHub.Pages.TableMaintenance.HomelessStatus.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Homeless Status";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -20,17 +20,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.HomelessStatus) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.HsOptions)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.HsId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.HsId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.HsId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.HomelessStatus)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.HsOptions)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.HsId">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.HsId">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.HsId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
