--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/QuarterlyRange/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/QuarterlyRange/Index.cshtml
@@ -2,12 +2,12 @@
 @model EarlyLearningHub.Pages.TableMaintenance.QuarterlyRange.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Quarter";
 }
 
 
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -31,26 +31,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.QuarterlyRange) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.QrName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QrBeginDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QrEndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QrActive)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.QrId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.QrId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.QrId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.QuarterlyRange)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QrName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QrBeginDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QrEndDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.QrActive)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.QrId">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.QrId">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.QrId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
