--- a/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/State/Index.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/TableMaintenance/State/Index.cshtml
@@ -2,10 +2,10 @@
 @model EarlyLearningHub.Pages.TableMaintenance.State.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "State";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
     <a asp-page="Create">Create New</a>
@@ -23,20 +23,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.State) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.StName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StAbbreviation)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.StId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.StId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.StId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.State)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StAbbreviation)
+                </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.StId">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.StId">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.StId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
