--- a/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Delete.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Delete.cshtml
@@ -13,12 +13,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ProviderLevel.PlPrId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ProviderLevel.PlPrId)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.ProviderLevel.PlNumClassroomServingPpc)
         </dt>
         <dd>
@@ -121,16 +115,16 @@
             @Html.DisplayFor(model => model.ProviderLevel.PlPe.PeEmail)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProviderLevel.PlPrvd)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProviderLevel.PlPrvd.PrvdName)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProviderLevel.PlPt)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ProviderLevel.PlPt.PrvdName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ProviderLevel.PlPtNavigation)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ProviderLevel.PlPtNavigation.PtName)
+            @Html.DisplayFor(model => model.ProviderLevel.PlPt.PtName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ProviderLevel.PlQr)
