--- a/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Edit.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Edit.cshtml
@@ -25,9 +25,9 @@
                 <span asp-validation-for="ProviderLevel.PlElhId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ProviderLevel.PlPrId" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlPrId" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlPrId" class="text-danger"></span>
+                <label asp-for="ProviderLevel.PlPrvdId" class="control-label"></label>
+                <select asp-for="ProviderLevel.PlPrvdId" class="form-control" asp-items="ViewBag.PlPrvdId"></select>
+                <span asp-validation-for="ProviderLevel.PlPrvdId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ProviderLevel.PlPeId" class="control-label"></label>
