--- a/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
@@ -32,11 +32,11 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
                     @*<li><a asp-page="/About">About</a></li>
-        <li><a asp-page="/Contact">Contact</a></li>*@
+                    <li><a asp-page="/Contact">Contact</a></li>*@
                     <li><a asp-page="/TableMaintenance">Table Maintenance (Admin)</a></li>
                     <li><a asp-page="/Main/ProviderLevel/Create">Provider Level</a></li>
                     <li><a asp-page="/Main/ProviderLevel/Index">Provider Level- test</a></li>
-                    <li><a asp-page="/Main/Upload/Upload.cshtml">Upload</a></li>
+                    <li><a asp-page="/UploadFile">Upload</a></li>
                 </ul>
             </div>
         </div>
