add student level and update classes

--- a/EarlyLearningHub/EarlyLearningHub/Pages/FileUpload.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/FileUpload.cshtml
@@ -4,6 +4,8 @@
 }
 
 
+<h2>Student - File Upload</h2>
+
 <form method="post" enctype="multipart/form-data">
     <input type="file" asp-for="Upload" />
     <input type="submit" value ="Upload"/>
