--- a/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     <li><a asp-page="/Contact">Contact</a></li>*@
                     <li><a asp-page="/TableMaintenance">Table Maintenance (Admin)</a></li>
                     <li><a asp-page="/Main/ProviderLevel/Create">Provider Level</a></li>
-                    <li><a asp-page="/Main/ProviderLevel/Index">Provider Level- test</a></li>
+                    <li><a asp-page="/Main/StudentLevel/Create">Student Level</a></li>
                     <li><a asp-page="/FileUpload">Upload</a></li>
                 </ul>
             </div>
