--- a/EarlyLearningHub/EarlyLearningHub/Pages/Main/StudentLevel/Delete.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Main/StudentLevel/Delete.cshtml
@@ -67,12 +67,6 @@
             @Html.DisplayFor(model => model.StudentLevel.SlBirthdate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.StudentLevel.SlGeId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.StudentLevel.SlGeId)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAddress)
         </dt>
         <dd>
@@ -109,10 +103,10 @@
             @Html.DisplayFor(model => model.StudentLevel.SlPhoneNumber)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.StudentLevel.SlRequiredSpecializedServices)
+            @Html.DisplayNameFor(model => model.StudentLevel.SlRequiredSpecializedServicesOptId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.StudentLevel.SlRequiredSpecializedServices)
+            @Html.DisplayFor(model => model.StudentLevel.SlRequiredSpecializedServicesOptId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlStartDate)
@@ -133,10 +127,34 @@
             @Html.DisplayFor(model => model.StudentLevel.SlAssignedClassromName)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ1)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ1)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ1)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ1)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ1)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StudentLevel.SlAverageFromQ1)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ2)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ2)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ2)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ2)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ2)
@@ -145,10 +163,34 @@
             @Html.DisplayFor(model => model.StudentLevel.SlAverageFromQ2)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ3)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ3)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ3)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ3)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ3)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StudentLevel.SlAverageFromQ3)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ4)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ4)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ4)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ4)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ4)
@@ -221,6 +263,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StudentLevel.SlFreeReducedLunchProgramOpt.OptValue)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlGe)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlGe.GeAbbreviation)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlHomelessStatusOpt)
