--- a/EarlyLearningHub/EarlyLearningHub/Pages/Main/StudentLevel/Details.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Main/StudentLevel/Details.cshtml
@@ -66,12 +66,6 @@
             @Html.DisplayFor(model => model.StudentLevel.SlBirthdate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.StudentLevel.SlGeId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.StudentLevel.SlGeId)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAddress)
         </dt>
         <dd>
@@ -108,10 +102,10 @@
             @Html.DisplayFor(model => model.StudentLevel.SlPhoneNumber)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.StudentLevel.SlRequiredSpecializedServices)
+            @Html.DisplayNameFor(model => model.StudentLevel.SlRequiredSpecializedServicesOptId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.StudentLevel.SlRequiredSpecializedServices)
+            @Html.DisplayFor(model => model.StudentLevel.SlRequiredSpecializedServicesOptId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlStartDate)
@@ -132,10 +126,34 @@
             @Html.DisplayFor(model => model.StudentLevel.SlAssignedClassromName)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ1)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ1)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ1)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ1)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ1)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StudentLevel.SlAverageFromQ1)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ2)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ2)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ2)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ2)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ2)
@@ -144,10 +162,34 @@
             @Html.DisplayFor(model => model.StudentLevel.SlAverageFromQ2)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ3)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ3)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ3)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ3)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ3)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StudentLevel.SlAverageFromQ3)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysEnrolledQ4)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysEnrolledQ4)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlDaysAttendedQ4)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlDaysAttendedQ4)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlAverageFromQ4)
@@ -220,6 +262,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StudentLevel.SlFreeReducedLunchProgramOpt.OptValue)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.StudentLevel.SlGe)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.StudentLevel.SlGe.GeAbbreviation)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StudentLevel.SlHomelessStatusOpt)
